--- a/src/pages/privacy.astro
+++ b/src/pages/privacy.astro
@@ -7,28 +7,26 @@ import Page from "@layouts/Page.astro";
   title="Privacy – How I handle your data"
   description="How I handle your data when visiting the site."
 >
-  <main>
-    <p>
-      I want to process as little personal information as possible when you use
-      my website. That's why I've chosen TelemetryDeck for my website analytics.
-    </p>
-    <p>
-      The purpose of me using this software is to understand my website traffic
-      in the most privacy-friendly way possible so that I can continually
-      improve my website. The lawful basis as per the GDPR is "f); where our
-      legitimate interests are to improve our website and business continually."
-      As per the explanation, no personal data is stored over time.
-    </p>
-    <p>
-      TelemetryDeck <mark
-        >does not collect any personally identifiable information</mark
-      > and <mark>does not use cookies</mark>. You can read more about
-      TelemetryDeck’s privacy policy at
-      <a
-        href="https://telemetrydeck.com/privacy"
-        title="TelemetryDeck - Privacy Policy"
-        target="_blank">https://telemetrydeck.com/privacy</a
-      >
-    </p>
-  </main>
+  <p>
+    I want to process as little personal information as possible when you use my
+    website. That's why I've chosen TelemetryDeck for my website analytics.
+  </p>
+  <p>
+    The purpose of me using this software is to understand my website traffic in
+    the most privacy-friendly way possible so that I can continually improve my
+    website. The lawful basis as per the GDPR is "f); where our legitimate
+    interests are to improve our website and business continually." As per the
+    explanation, no personal data is stored over time.
+  </p>
+  <p>
+    TelemetryDeck <mark
+      >does not collect any personally identifiable information</mark
+    > and <mark>does not use cookies</mark>. You can read more about
+    TelemetryDeck’s privacy policy at
+    <a
+      href="https://telemetrydeck.com/privacy"
+      title="TelemetryDeck - Privacy Policy"
+      target="_blank">https://telemetrydeck.com/privacy</a
+    >
+  </p>
 </Page>
