--- a/src/pages/writing/index.astro
+++ b/src/pages/writing/index.astro
@@ -1,9 +1,9 @@
 ---
-import Wrap from "@components/Wrap.astro";
 import Page from "@layouts/Page.astro";
 import { formatDate } from "utils";
 
-const articles = await Astro.glob("./*.md");
+const matches = import.meta.glob("./*.md", { eager: true });
+const articles = Object.values(matches);
 ---
 
 <Page
@@ -20,12 +20,14 @@ const articles = await Astro.glob("./*.md");
           );
         })
         .map((article) => (
-          <div class="flex flex-col mb-8">
+          <div class="flex flex-col mb-4 pb-4 border-b-1">
             <a
               href={article.url}
-              class="no-underline hover:decoration-4 grow"
+              class="no-underline hover:decoration-4 grow flex flex-col md:flex-row md:items-center justify-between"
             >
-              <h2 class="mt-0 mb-2 text-2xl">{article.frontmatter.title}</h2>
+              <h2 class="mt-0 mb-2 text-base hover:text-sky-500">
+                {article.frontmatter.title}
+              </h2>
             </a>
             <div class="flex flex-row text-xs text-left text-neutral-500">
               <span class="mr-2">{formatDate(article.frontmatter.date)}</span>⋅
