--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,29 +1,28 @@
 ---
-import Wrap from "./Wrap.astro";
+
 ---
 
-<Wrap>
-  <div class="flex flex-row justify-between items-center mb-16">
+<header
+  class="flex flex-row justify-between w-full md:w-[720px] mx-auto px-4 md:px-0 mb-16"
+>
+  <a
+    href="/"
+    class="no-underline text-neutral-800 hover:text-sky-500 hover:no-underline pacity-0"
+  >
+    edvinlinden.se
+  </a>
+  <div class="flex flex-col md:flex-row items-end">
     <a
-      href="/"
-      class="flex flex-col leading-5 font-heading text-2xl font-black no-underline text-neutral-900 hover:text-neutral-900 hover:no-underline uppercase"
+      href="/#projects"
+      class="no-underline md:mr-4 text-neutral-800 hover:text-sky-500 pacity-0"
     >
-      <span class="animate-logofirst opacity-0">Edvin</span>
-      <span class="animate-logolast opacity-0">Lindén</span>
-    </a>
-    <div class="flex flex-col md:flex-row items-end">
-      <a
-        href="/writing/"
-        class="no-underline md:mr-4 font-heading text-lg md:text-xl font-thin text-neutral-600 opacity-0 animate-fade-in-200"
-      >
-        Writing</a
-      >
-      <a
-        href="/about/"
-        class="no-underline font-heading text-lg md:text-xl font-thin text-neutral-600 opacity-0 animate-fade-in-200"
-      >
-        About</a
-      >
-    </div>
+      projects</a
+    >
+    <a
+      href="/writing/"
+      class="no-underline md:mr-4 text-neutral-800 hover:text-sky-500 pacity-0"
+    >
+      writing</a
+    >
   </div>
-</Wrap>
+</header>
