--- a/src/layouts/Article.astro
+++ b/src/layouts/Article.astro
@@ -5,7 +5,6 @@ import Header from "@components/Header.astro";
 import Articles from "@components/Articles.astro";
 import "../tailwind/base.css";
 import { formatDate } from "../utils";
-import Divider from "@components/Divider.astro";
 
 export interface Props {
   title: string;
@@ -23,7 +22,7 @@ const socialImageURL = new URL(image, Astro.url);
 const articles = await Astro.glob("../pages/writing/*.md");
 ---
 
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en" class="h-full m-0 p-0">
   <head>
     <meta charset="UTF-8" />
@@ -39,74 +38,30 @@ const articles = await Astro.glob("../pages/writing/*.md");
     <meta property="og:url" content={canonicalURL} />
     <meta name="twitter:card" content="summary_large_image" />
     <link rel="icon" type="image/svg+xml" href="/images/smile.svg" />
-    <style>
-      /* latin-ext */
-      @font-face {
-        font-family: "Geologica";
-        font-style: normal;
-        font-weight: 400;
-        font-display: swap;
-        src: url(/fonts/geologica-latin-ext.woff2) format("woff2");
-        unicode-range: U+0100-02AF, U+0304, U+0308, U+0329, U+1E00-1E9F,
-          U+1EF2-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F,
-          U+A720-A7FF;
-      }
-      /* latin */
-      @font-face {
-        font-family: "Geologica";
-        font-style: normal;
-        font-weight: 400;
-        font-display: swap;
-        src: url(/fonts/geologica-latin.woff2) format("woff2");
-        unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6,
-          U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC,
-          U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-      }
-      /* latin-ext */
-      @font-face {
-        font-family: "Geologica";
-        font-style: normal;
-        font-weight: 900;
-        font-display: swap;
-        src: url(/fonts/geologica-latin-ext.woff2) format("woff2");
-        unicode-range: U+0100-02AF, U+0304, U+0308, U+0329, U+1E00-1E9F,
-          U+1EF2-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F,
-          U+A720-A7FF;
-      }
-      /* latin */
-      @font-face {
-        font-family: "Geologica";
-        font-style: normal;
-        font-weight: 900;
-        font-display: swap;
-        src: url(/fonts/geologica-latin.woff2) format("woff2");
-        unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6,
-          U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC,
-          U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-      }
-    </style>
     <title>{title} – Edvin Lindén</title>
   </head>
   <body class="flex flex-col h-full">
     <Header />
-    <Wrap cls="flex flex-col grow">
-      <article class="flex flex-col items-center">
-        <div class="w-full md:w-[720px]">
-          <h1 class="mb-8 md:text-center">{title}</h1>
-          <div
-            class="mb-16 md:text-center uppercase tracking-wider text-2xs font-normal text-neutral-500"
+    <article
+      class="flex flex-col items-center grow w-full md:w-[720px] mx-auto px-4 md:px-0"
+    >
+      <div class="w-full md:w-[720px]">
+        <h1 class="mb-8 md:text-center">{title}</h1>
+        <div
+          class="mb-16 md:text-center uppercase tracking-wider text-2xs font-normal text-neutral-500"
+        >
+          <span class="mr-2">{formatDate(date)}</span>⋅<span class="ml-2"
+            >{readingTime} reading time</span
           >
-            <span class="mr-2">{formatDate(date)}</span>⋅<span class="ml-2"
-              >{readingTime} reading time</span
-            >
-          </div>
-          <slot />
         </div>
-      </article>
-    </Wrap>
-    <Wrap>
-      <Divider text="Continue reading" />
-    </Wrap>
+        <slot />
+      </div>
+    </article>
+    <div
+      class="text-xl text-center font-heading font-black text-neutral-900 bg:text-neutral-100"
+    >
+      Other things i've written
+    </div>
     <Articles
       headline="Continue reading"
       articles={articles
