--- a/src/layouts/FirstPage.astro
+++ b/src/layouts/FirstPage.astro
@@ -1,6 +1,5 @@
 ---
 import Footer from "../components/Footer.astro";
-import Wrap from "../components/Wrap.astro";
 import Header from "../components/Header.astro";
 import "../tailwind/base.css";
 import PageMeta from "@components/PageMeta.astro";
@@ -13,14 +12,16 @@ export interface Props {
 const { title, description } = Astro.props;
 ---
 
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en" class="h-full m-0 p-0">
   <head>
     <PageMeta title={title} description={description} />
   </head>
   <body class="flex flex-col h-full">
     <Header />
-    <slot />
+    <main class="flex flex-col grow w-full md:w-[720px] mx-auto px-4 md:px-0">
+      <slot />
+    </main>
     <Footer />
   </body>
 </html>
