--- a/src/layouts/Page.astro
+++ b/src/layouts/Page.astro
@@ -1,9 +1,8 @@
 ---
 import Footer from "@components/Footer.astro";
-import Wrap from "@components/Wrap.astro";
 import Header from "@components/Header.astro";
-import "../tailwind/base.css";
 import PageMeta from "@components/PageMeta.astro";
+import "../tailwind/base.css";
 
 export interface Props {
   title: string;
@@ -14,22 +13,18 @@ export interface Props {
 const { title, description, headline } = Astro.props;
 ---
 
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en" class="h-full m-0 p-0">
   <head>
     <PageMeta title={title} description={description} />
   </head>
   <body class="flex flex-col h-full">
     <Header />
-    <main>
-      <Wrap cls="flex flex-col grow" innerCls="flex flex-col items-center">
-        <div class="w-full md:w-[720px]">
-          <h1 class="mb-8">
-            {headline ? headline : title}
-          </h1>
-          <slot />
-        </div>
-      </Wrap>
+    <main class="flex flex-col grow w-full md:w-[720px] mx-auto px-4 md:px-0">
+      <h1 class="mb-8">
+        {headline ? headline : title}
+      </h1>
+      <slot />
     </main>
     <Footer />
   </body>
