--- a/src/components/GoodbyeOverlay.astro
+++ b/src/components/GoodbyeOverlay.astro
@@ -5,7 +5,7 @@
   Goodbye
 </div>
 
-<script>
+<script defer async>
   const isDevelopMode = import.meta.env.DEV;
   let goodbyeInterval = null;
   const goodbyeList = [
