--- a/src/components/TelemetryDeck.astro
+++ b/src/components/TelemetryDeck.astro
@@ -4,4 +4,6 @@
 
 <script
   src="https://cdn.telemetrydeck.com/websdk/telemetrydeck.min.js"
-  data-app-id="54633903-E86D-4568-BB34-23E05CE1D1D6"></script>
+  data-app-id="54633903-E86D-4568-BB34-23E05CE1D1D6"
+  defer
+  async></script>
