--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -34,6 +34,7 @@ import FirstPage from "@layouts/FirstPage.astro";
         class="absolute top-0 bottom-0 left-0 right-0 w-full h-full object-cover rounded-xl"
         src="/images/edvin-linden-2024.webp"
         loading="lazy"
+        alt="Image of Edvin Lindén 2024"
       />
     </picture>
   </div>
