--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -42,7 +42,7 @@ import FirstPage from "@layouts/FirstPage.astro";
     <h2 class="mb-16" id="projects">Projects</h2>
   </div>
   <a
-    href="https://killedby.tech/?ref=edvinlinden.se"
+    href="https://github.com/edvinlinden/killedby.tech/?ref=edvinlinden.se"
     target="_blank"
     rel="noopener noreferrer"
     class="flex flex-col md:flex-row no-underline hover:text-neutral-500 rounded-xl hover:bg-neutral-100 md:p-6 mb-8"
@@ -53,8 +53,15 @@ import FirstPage from "@layouts/FirstPage.astro";
     </div>
     <div class="w-full md:w-[540px] md:pl-8">
       <div class="flex flex-col md:flex-row md:items-center justify-between">
-        <h3 class="my-0 text-[20px]">Killedby.tech</h3>
-        <span class="text-xs font-medium">2022 – 2025 </span>
+        <div class="flex gap-4 items-center">
+          <h3 class="my-0 text-[20px]">Killedby.tech</h3>
+          <div
+            class="uppercase text-2xs font-normal tracking-wider rounded-sm bg-neutral-200 inline h-4 px-1"
+          >
+            Deprecated
+          </div>
+        </div>
+        <span class="text-xs font-medium">2022 – 2025</span>
       </div>
       <p>
         We all know about the Google Graveyard, the list of products that Google
