Add section about Sudoku

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -41,6 +41,29 @@ import FirstPage from "@layouts/FirstPage.astro";
   <div class="mt-24">
     <h2 class="mb-16" id="projects">Projects</h2>
   </div>
+   <a
+    href="https://apps.apple.com/us/app/sudoku-puzzle-game-offline/id6757938217?ref=edvinlinden.se"
+    target="_blank"
+    rel="noopener noreferrer"
+    class="flex flex-col md:flex-row no-underline hover:text-neutral-500 rounded-xl hover:bg-neutral-100 md:p-6 mb-8"
+  >
+    <div
+      class="bg-[url('/images/sudoku.webp')] bg-cover bg-center w-full md:w-[180px] h-[300px] md:h-[180px] rounded-xl p-4 border border-neutral-300 mb-8 md:mb-0"
+    >
+    </div>
+    <div class="w-full md:w-[540px] md:pl-8">
+ 	  <div class="flex flex-col md:flex-row md:items-center justify-between">
+        <h3 class="my-0 text-[20px]">Sudoku for iPhone & iPad</h3>
+      	<span class="text-xs font-medium">2026 – 20░░</span>
+      </div>
+      <p>
+        I have been playing a lot of Sudoku on my phone, but all the apps I tried were either full of ads or required a purchase. So I decided to create my own - a free Sudoku app without ads, push notifications or unneccisary experience points.
+      </p>
+      <p>
+      	I just want to pick up my phone, play some Sudoku and then go on with my life.
+      </p>
+    </div>
+  </a>
   <a
     href="https://github.com/edvinlinden/killedby.tech/?ref=edvinlinden.se"
     target="_blank"
