Update text for Sudoku and about me section

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,7 +14,7 @@ import FirstPage from "@layouts/FirstPage.astro";
         Hi, my name is Edvin and I am a product leader living in Sweden.
       </h1>
       <p>
-        I am currently working with customer experience at
+        I am currently working at
         <a
           href="https://fortnox.se"
           target="_blank"
@@ -57,7 +57,10 @@ import FirstPage from "@layouts/FirstPage.astro";
       	<span class="text-xs font-medium">2026 – 20░░</span>
       </div>
       <p>
-        I have been playing a lot of Sudoku on my phone, but all the apps I tried were either full of ads or required a purchase. So I decided to create my own - a free Sudoku app without ads, push notifications or unneccisary experience points.
+        I have been playing a lot of Sudoku on my phone, but all the apps I tried were either full of ads or required a purchase.
+      </p>
+      <p>
+      	So I decided to create my own - a free Sudoku app without ads, push notifications or unneccisary experience points.
       </p>
       <p>
       	I just want to pick up my phone, play some Sudoku and then go on with my life.
